<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activitys.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.card.MaterialCardView
            style="@style/MaterialCardViewStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/about_card_radius"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <!-- Content inside the first card -->
                <ImageView
                    android:id="@+id/logoIV"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="45dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/logoIV"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextViewHeadline5"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/versionNameTV"
                        tools:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        tools:text="@string/app_version" />

                    <ImageView
                        android:id="@+id/openPlayBeatInstaPage"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_instagram" />


                </LinearLayout>

                <!-- Replace with desired content -->

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <!--x-->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            style="@style/MaterialCardViewStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/about_card_radius"
            app:cardElevation="2dp">

            <RelativeLayout
                android:id="@+id/about_dev"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <!-- Content inside the second card -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@null"
                        android:src="@drawable/sam"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/developed_and_designed_by"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="@+id/logo"
                        app:layout_constraintStart_toStartOf="@+id/logo"
                        app:layout_constraintTop_toBottomOf="@+id/logo" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/samyak_kamble"
                        android:textAppearance="@style/TextViewHeadline5"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!-- Replace with desired content -->

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
    <!--y-->

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardViewx"
            style="@style/MaterialCardViewStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/about_card_radius"
            app:cardElevation="2dp">

            <RelativeLayout
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <!-- Content inside the third card -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/privacypolicyBtutton"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/privacypolicy"
                        android:contentDescription="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/desclaimerButton"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/about"
                        android:contentDescription="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/privacypolicyBtutton"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/githubButton"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/github"
                        android:contentDescription="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/desclaimerButton"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/disclaimer"
                        app:layout_constraintEnd_toEndOf="@+id/desclaimerButton"
                        app:layout_constraintStart_toStartOf="@+id/desclaimerButton"
                        app:layout_constraintTop_toBottomOf="@+id/desclaimerButton" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/privacy_policys"
                        app:layout_constraintEnd_toEndOf="@+id/privacypolicyBtutton"
                        app:layout_constraintStart_toStartOf="@+id/privacypolicyBtutton"
                        app:layout_constraintTop_toBottomOf="@+id/privacypolicyBtutton" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <!-- Replace with desired content -->

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bannerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/my_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:gnt_template_type="@layout/gnt_medium_template_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bannerLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
